# git-enhauser

./: Cargo.toml  README.md  README_zh.md  config.toml
doc/: DEVELOPMENT.md
doc/prds/: DevOps关联.md  原始产品需求.md
doc/stories/: ai-command-explanation.md  ai-commit.md  commit-auto-stage-tracked-files.md
prompts/: commit-prompt  explanation-prompt
src/: ai_commands.rs  ai_explainer.rs  ai_utils.rs  cli.rs  commit_commands.rs  config.rs  errors.rs  git_commands.rs  main.rs  types.rs  utils.rs
tests/: commit_integration_tests.rs
